syntax = "proto3";

package pb;


option go_package = "server-test/pb";

message DataInfo{
    string name = 1;
    string fullname = 2;
}

message UserAccInfo{
    string username = 1;
    string fullname = 2;
}


message FileUploadInfo {
    string fileId = 1;
    string fileName = 2;
    string fileType = 3;
    string link = 4;
    int64 sizeFile = 5;
    string timeCreateAt = 6;
}


message ServiceInfo {
  string id = 1;
  string name = 2; 
}

message ErrorInfo {
    int64 codeHttp = 2; 
    string status = 1;
  }