syntax = "proto3";

package pb_storage;

import "rpc_data_processing.proto";

option go_package = "server-test/server-process-data/pb_processing";


service Processing {
    rpc TestData2(DataInfoTestResquest1) returns (DataInfoTestRespone1) {
    }


    rpc ProcessingFileExcel(ProcessingFileResquest) returns (ProcessingFileRespone) {
    }
} 
